interactive python notebook file changed a bit

--- a/Persian Digit Recognizer.ipynb
+++ b/Persian Digit Recognizer.ipynb
@@ -569,6 +569,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "there is almost no difference with running the model with Dropout and Validation set. but it caused the network to learn faster. so sometimes it is better to use batch size for learning a network"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
